# a_maze_ing

./: README.md  a_maze_ing.py  amazing.md  config.txt  config_test.py  maze_solver_test.py  pyproject.toml
config/: __init__.py  model.py  parser.py  validator.py
maze_solver/: __init__.py  constants.py  neighbors.py  parser.py  solver.py
maze_solver/algorithms/: __init__.py  astar.py  bfs.py  dfs.py  dijkstra.py
