[project]
name = "a-maze-ing"
version = "0.1.0"
description = "Visual Maze Generator in Python"
authors = [
    {name = "Etrujill",email = "etrujill@student.42heilbronn.de"},
    {name = "Ecakiray", email = "ecakiray@student.42heilbronn.de"}
]
readme = "README.md"
requires-python = "3.11.14"
dependencies = [
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=2.1.0,<3.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pynput (>=1.8.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
